<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.avaje</groupId>
		<artifactId>examples</artifactId>
		<version>0.1</version>
	</parent>

	<artifactId>hello-world-jex</artifactId>

	<properties>
		<maven.compiler.release>25</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>


	<dependencies>
		<dependency>
			<groupId>io.avaje.webview</groupId>
			<artifactId>avaje-webview-all</artifactId>
			<version>0.18</version>
		</dependency>

		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-jex-static-content</artifactId>
			<version>3.5</version>
		</dependency>

	</dependencies>
	<build>
		<plugins>
			<!-- Create the Runnable Jar with dependencies -->
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-modules</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/modules</outputDirectory>
							<includeScope>runtime</includeScope>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<outputDirectory>${project.build.directory}/modules</outputDirectory>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>example.Main</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>native</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<version>1.1.1</version>
						<executions>
							<execution>
								<id>build-native</id>
								<goals>
									<goal>compile-no-fork</goal>
								</goals>
								<phase>package</phase>
								<configuration>
									<mainClass>example.Main</mainClass>
									<jvmArgs>
										<jvmArg>--enable-native-access=ALL-UNNAMED</jvmArg>
									</jvmArgs>
									<buildArgs>
										<buildArg>-Ob</buildArg> <!-- fast build -->
										<buildArg>-R:MaxHeapSize=200m</buildArg>
										<buildArg>--no-fallback</buildArg>
										<buildArg>--allow-incomplete-classpath</buildArg>
										<buildArg>-march=compatibility</buildArg>
									</buildArgs>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>jlink</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.moditect</groupId>
						<artifactId>moditect-maven-plugin</artifactId>
						<version>1.3.0.Final</version>
						<executions>
							<execution>
								<id>create-runtime-image</id>
								<phase>package</phase>
								<goals>
									<goal>create-runtime-image</goal>
								</goals>
								<configuration>
									<modulePath>
										<path>${project.build.directory}/modules</path>
									</modulePath>
									<modules>
										<module>webview.example</module>
									</modules>
									<noManPages>true</noManPages>
									<noHeaderFiles>true</noHeaderFiles>
									<jarInclusionPolicy>NONE</jarInclusionPolicy>
									<outputDirectory>
										${project.build.directory}/jlink-image
									</outputDirectory>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>